fix the bug of controller, and try to use the socket.io.
